src/objects/PagesApi__Page_Element_Attribute__c.object
<CustomObject>
    <description>Page Element Attributes store the configuration required for various Page Elements.</description>
    <fields>
        <fullName>PagesApi__Key__c</fullName>
        <description>** Required ** Attribute key as defined by the page element dynamic component.</description>
        <inlineHelpText>** Required ** Attribute key as defined by the page element dynamic component.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Page_Element__c</fullName>
        <description>** Required ** Link to related Page Element.</description>
        <inlineHelpText>** Required ** Link to related Page Element.</inlineHelpText>
        <label>Page Element</label>
        <referenceTo>PagesApi__Page_Element__c</referenceTo>
        <relationshipLabel>Page Element Attributes</relationshipLabel>
        <relationshipName>Page_Element_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PagesApi__Type__c</fullName>
        <description>** System Field ** The expected and required data type of the page element attribute.</description>
        <inlineHelpText>** System Field ** The expected and required data type of the page element attribute.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Value__c</fullName>
        <description>The value set for the page element configuration.</description>
        <inlineHelpText>The value set for the page element configuration.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Page Element Attribute</label>
    <nameField>
        <label>Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Element Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>